Ensure Change Board Owners title does not wrap

--- a/ui/src/Styles/_mixins.scss
+++ b/ui/src/Styles/_mixins.scss
@@ -95,6 +95,7 @@
 
 		font-size: 2.5rem;
 		line-height: 3.125rem;
+		white-space: nowrap;
 		text-align: center;
 	}
 
